--- a/main.css
+++ b/main.css
@@ -47,7 +47,9 @@ table {
 	border-spacing: 0;
 }
 
-/*end of reset*/
+/*-----------------------------------------------------------------------------
+end of reset
+------------------------------------------------------------------------------*/
 
 body {
 	width: 100%;
@@ -119,7 +121,7 @@ input {
 	-moz-box-shadow:    inset 0 0 3px #000000;
  	-webkit-box-shadow: inset 0 0 3px #000000;
    	box-shadow:         inset 0 0 3px #000000;
-   	font: 27px Lucida Grande,sans-serif;
+   	font: 25px Lucida Grande,sans-serif;
    	text-align: center;
 }
 
